force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/of_monthly_leads_to_achieve_quota__c.field-meta.xml
<CustomField>
    <fullName>of_monthly_leads_to_achieve_quota__c</fullName>
    <label># of monthly leads to achieve quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>