force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/of_monthly_opptys_req_to_achieve_quo__c.field-meta.xml
<CustomField>
    <fullName>of_monthly_opptys_req_to_achieve_quo__c</fullName>
    <label># of monthly QO req to achieve quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>