force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/of_wins_to_achieve_quarterly_quota__c.field-meta.xml
<CustomField>
    <fullName>of_wins_to_achieve_quarterly_quota__c</fullName>
    <label># of wins to achieve quarterly quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>