force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Projected_Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Projected_Annualized_Revenue__c</fullName>
    <label>Projected Annualized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>