force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Q1_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Q1_Quota_Amount__c</fullName>
    <label>Q1 Quota Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>