force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_Average_Win_Size__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Average_Win_Size__c</fullName>
    <label>Quarterly Average $ Win Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>