force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_Average_Win_Size_percentage__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Average_Win_Size_percentage__c</fullName>
    <label>Quarterly Average $ Win Size percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>