force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_Funnel_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Funnel_Opportunities__c</fullName>
    <label>Quarterly Funnel Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>