force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_Lead_Added__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Lead_Added__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quarterly Lead Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>