force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_Lead_Added_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Lead_Added_Percentage__c</fullName>
    <label>Quarterly Lead Added Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>