force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_lost_QO__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_lost_QO__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quarterly lost QO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>