force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_Opp_added_to_Qualif_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Opp_added_to_Qualif_Percentage__c</fullName>
    <label>Quarterly Opp added to Qualif Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>