force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_Opportunities_Added_amt__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Opportunities_Added_amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quarterly funnel $ amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>