force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_Opportunities_added_to_Qualifi__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Opportunities_added_to_Qualifi__c</fullName>
    <label>Quarterly Opportunities added to Qualifi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>