force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_Quota_Performance__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Quota_Performance__c</fullName>
    <label>Quarterly Quota Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>