force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quarterly_Wins__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Wins__c</fullName>
    <label>Quarterly Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>