force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Quartile__c.field-meta.xml
<CustomField>
    <fullName>Quartile__c</fullName>
    <label>Quartile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>