force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Role_change_date__c.field-meta.xml
<CustomField>
    <fullName>Role_change_date__c</fullName>
    <label>Role change date</label>
    <type>Date</type>
</CustomField>