force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Sales Rep Profile Snapshots</relationshipLabel>
    <relationshipName>Sales_Rep_Profile_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>