force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Sales_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Id__c</fullName>
    <description>API name in sales profile object is Manger_Id__c</description>
    <label>Manager Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>