force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Sales_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Name__c</fullName>
    <description>API Name in sales profile object is Manger_Name__c</description>
    <label>Manager Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>