force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Sales_Rep_id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_id__c</fullName>
    <label>Sales Rep id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>