force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Sales_Rep_Profile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Profile</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Sales Rep Profile Snapshots (Sales Rep Profile)</relationshipLabel>
    <relationshipName>Sales_Rep_Profile_Snapshots1</relationshipName>
    <type>Lookup</type>
</CustomField>