force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Sales_Rep_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Start_Date__c</fullName>
    <description>API name in the Sales profile object is Rep_Start_Date__c</description>
    <label>Sales Rep Start Date</label>
    <type>Date</type>
</CustomField>