force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Sales_Title__c.field-meta.xml
<CustomField>
    <fullName>Sales_Title__c</fullName>
    <label>Sales Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>