force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Schedule_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_Month__c</fullName>
    <formula>month ( Snapshot_Scheduled_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>