force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Schedule_Date_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_Quarter__c</fullName>
    <description>Formula Field that allows reporting by Quarter. Format YearQx.</description>
    <formula>TEXT(YEAR( Snapshot_Scheduled_Date__c )) &amp; &quot;Q&quot; &amp; TEXT(FLOOR(((MONTH( Snapshot_Scheduled_Date__c )-1)/3)+1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Date Quarter</label>
    <type>Text</type>
</CustomField>