force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Schedule_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_Year__c</fullName>
    <formula>TEXT(YEAR(Snapshot_Scheduled_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Date Year</label>
    <type>Text</type>
</CustomField>