force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Tenure_in_current_role__c.field-meta.xml
<CustomField>
    <fullName>Tenure_in_current_role__c</fullName>
    <label>Tenure in current role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>