force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Samoa</fullName>
            </value>
            <value>
                <fullName>Guam</fullName>
            </value>
            <value>
                <fullName>Northern Mariana Islands</fullName>
            </value>
            <value>
                <fullName>Puerto Rico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>