force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Time_to_Tenured_Average_Rev__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Tenured_Average_Rev__c</fullName>
    <label>Time to Tenured Average Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>