force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/User_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Record_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Record Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Rep_Profile_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>