force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/X12_Month_Average_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Average_Selling_Price__c</fullName>
    <label>12 Month Average Selling Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>