force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/X12_Month_funnel_amt__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_funnel_amt__c</fullName>
    <label>12 Month funnel $ amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>