force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/X12_Month_Lead_Conv_for_1_oppty__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Lead_Conv_for_1_oppty__c</fullName>
    <label>12 Month Lead Conv % for 1 oppty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>