force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/X12_Month_QO_added__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_QO_added__c</fullName>
    <defaultValue>0</defaultValue>
    <label>12 Month QO added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>