force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/X12_Month_Rolling_Average_Win_Size_perc__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Average_Win_Size_perc__c</fullName>
    <label>12 Month Rolling Average $ Win Size perc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>