force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/X12_Month_Rolling_Lead_Added_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Lead_Added_Percentage__c</fullName>
    <label>12 Month Rolling Lead Added Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>