force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/X12_Month_Rolling_Opportunity_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Opportunity_Close_Rate__c</fullName>
    <label>12 Month Rolling Opportunity Close Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>