force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/X12_Month_Rolling_Opptys_Won__c.field-meta.xml
<CustomField>
    <fullName>X12_Month_Rolling_Opptys_Won__c</fullName>
    <label>12 Month Rolling Opptys Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>