force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/X18CharSalesRepID__c.field-meta.xml
<CustomField>
    <fullName>X18CharSalesRepID__c</fullName>
    <label>18CharSalesRepID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>