force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Average_Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>YTD_Average_Sales_Cycle__c</fullName>
    <label>YTD Average Sales Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>