force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Average_win_size__c.field-meta.xml
<CustomField>
    <fullName>YTD_Average_win_size__c</fullName>
    <label>YTD Average $ win size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>