force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Average_Win_Size_percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Average_Win_Size_percentage__c</fullName>
    <label>YTD Average $ Win Size percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>