force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Avg_Length_of_Sales_Cycle_percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Avg_Length_of_Sales_Cycle_percentage__c</fullName>
    <label>YTD Avg Length of Sales Cycle percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>