force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_close_rate_percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_close_rate_percentage__c</fullName>
    <label>YTD $ close rate percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>