force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Ytd_Funnel_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Ytd_Funnel_Opportunities__c</fullName>
    <label>Ytd Funnel Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>