force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Lead_Added_Percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Lead_Added_Percentage__c</fullName>
    <label>YTD Lead Added Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>