force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_lead_to_opp_conversion_percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_lead_to_opp_conversion_percentage__c</fullName>
    <label>YTD lead to opp conversion percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>