force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Ytd_lost_QO__c.field-meta.xml
<CustomField>
    <fullName>Ytd_lost_QO__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ytd lost QO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>