force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Opportunities_Added_amt__c.field-meta.xml
<CustomField>
    <fullName>YTD_Opportunities_Added_amt__c</fullName>
    <label>YTD funnel $ amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>