force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Opportunities_Added_percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Opportunities_Added_percentage__c</fullName>
    <label>YTD Opportunities Added percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>