force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Opportunities_Won__c.field-meta.xml
<CustomField>
    <fullName>YTD_Opportunities_Won__c</fullName>
    <label>YTD Opportunities Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>