force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Quota__c.field-meta.xml
<CustomField>
    <fullName>YTD_Quota__c</fullName>
    <label>YTD Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>